--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,9 +1,6 @@
-@(token: String, secret: String)
-
 @import play.twirl.api
 
-@main("Main page"){
-  <div id="token" style="display:none">@token</div>
-  <div id="secret" style="display:none">@secret</div>
+@main("Kikimora"){
+  <div style="font-size:30px" align="center">Kikimora</div>
   <div id="react-container"></div>
 }
